Fixed margin and tab problems on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
 .visible-xxs{
   display: none !important;
 }
+ .hidden-xxs {
+    display: block !important;
+  }
+
 #header-nav {
   background-color: #159957;
   background-image: linear-gradient(120deg, #3F0C1F,#03274B,#155799, #159957 );
@@ -248,7 +252,7 @@ display: block;
 
 }
 
-/********** Medium devices only **********/
+/******************************************************************Medium devices only********************************************* **********/
 @media (min-width: 992px) and (max-width: 1199px){
 
     /* Header */
@@ -319,11 +323,10 @@ display: block;
 .quick-links{
   height:260px;
 }
-
 }
 
 
-/********** Small devices only **********/
+/***********************************************************small devices only*****************************************************************/
 @media (min-width: 768px) and (max-width: 991px) {
 .container .jumbotron{
   padding: 0;
@@ -389,7 +392,7 @@ display: block;
 }
 }
 
-/********** Extra small devices only **********/
+/************************************************************************* Extra small devices only *********************************************/
 @media (max-width: 767px) {
   /* Header */
 .navbar-brand {
@@ -455,6 +458,9 @@ display: block;
   .visible-xxs{
   display: block !important;
 }
+ .hidden-xxs {
+    display: none !important;
+  }
   
 }
 
